@@ -51,18 +51,17 @@ branch  = branch0;
 bus(:, VM) = abs(V);
 bus(:, VA) = angle(V) * 180 / pi;
 
-%%----- update Qg for all gens and Pg for swing bus -----
+%%----- update Qg for all gens and Pg for slack bus(es) -----
 %% generator info
 on = find(gen(:, GEN_STATUS) > 0);      %% which generators are on?
 gbus = gen(on, GEN_BUS);                %% what buses are they at?
-refgen = find(gbus == ref);             %% which is(are) the reference gen(s)?
 
 %% compute total injected bus powers
-Sg = V(gbus) .* conj(Ybus(gbus, :) * V);
+Sbus = V(gbus) .* conj(Ybus(gbus, :) * V);
 
 %% update Qg for all generators
 gen(:, QG) = zeros(size(gen, 1), 1);                %% zero out all Qg
-gen(on, QG) = imag(Sg) * baseMVA + bus(gbus, QD);   %% inj Q + local Qd
+gen(on, QG) = imag(Sbus) * baseMVA + bus(gbus, QD); %% inj Q + local Qd
 %% ... at this point any buses with more than one generator will have
 %% the total Q dispatch for the bus assigned to each generator. This
 %% must be split between them. We do it first equally, then in proportion
@@ -77,8 +76,7 @@ if length(on) > 1
     %% divide Qg by number of generators at the bus to distribute equally
     ngg = Cg * sum(Cg)';    %% ngon x 1, number of gens at this gen's bus
     gen(on, QG) = gen(on, QG) ./ ngg;
-    
-    
+
     %% divide proportionally
     Cmin = sparse((1:ngon)', gbus, gen(on, QMIN), ngon, nb);
     Cmax = sparse((1:ngon)', gbus, gen(on, QMAX), ngon, nb);
@@ -93,11 +91,16 @@ if length(on) > 1
     gen(on(ig), QG) = Qg_save;
 end                                             %% (terms are mult by 0 anyway)
 
-%% update Pg for swing bus
-gen(on(refgen(1)), PG) = real(Sg(refgen(1))) * baseMVA + bus(ref, PD);  %% inj P + local Pd
-if length(refgen) > 1       %% more than one generator at the ref bus
-    %% subtract off what is generated by other gens at this bus
-    gen(on(refgen(1)), PG) = gen(on(refgen(1)), PG) - sum(gen(on(refgen(2:length(refgen))), PG));
+%% update Pg for slack gen(s)
+for k = 1:length(ref)
+    refgen = find(gbus == ref(k));              %% which is(are) the reference gen(s)?
+    gen(on(refgen(1)), PG) = real(Sbus(refgen(1))) * baseMVA ...
+                            + bus(ref(k), PD);  %% inj P + local Pd
+    if length(refgen) > 1       %% more than one generator at this ref bus
+        %% subtract off what is generated by other gens at this bus
+        gen(on(refgen(1)), PG) = gen(on(refgen(1)), PG) ...
+                                - sum(gen(on(refgen(2:length(refgen))), PG));
+    end
 end
 
 %%----- update/compute branch power flows -----
